--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
                     array of features designed to facilitate streamlined, on-the-go banking — available on iOS and
                     Android. </p>
                 </div>
+              </div>
             </a>
             <div class="modal fade" id="samba" tabindex="-1" role="dialog" aria-labelledby="app1" aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered" role="document">
@@ -285,132 +286,133 @@
 
             </div>
           </div>
-        </div>
 
-        <!--Luxury Adv -->
-        <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web">
-          <a class="" data-toggle="modal" data-target="#luxuryadv">
-            <div class="portfolio-wrap">
-              <img src="img/portfolio/luxuryadv/title.jpeg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <span>Luxury Adventures</span>
-                <p>A complete e-commerce platform — easy admin content mangement, integrated email marketing &
-                  blog, SEO, reporting tools & much more. </p>
-              </div>
-          </a>
-          <div class="modal fade" id="luxuryadv" tabindex="-1" role="dialog" aria-labelledby="app1" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content">
-                <div class="modal-body">
-                  <div class=" align-items-center">
-                    <div id="luxAdvControls" class=" carousel slide" data-ride="carousel">
-                      <div class="carousel-inner">
-                        <div class="carousel-item active">
-                          <img src="img/portfolio/luxuryadv/title.jpeg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="img/portfolio//luxuryadv/sup1.jpg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="img/portfolio/luxuryadv/sup2.jpg" class="d-block w-100" alt="...">
-                        </div>
-                      </div>
-                      <a class="carousel-control-prev" href="#luxAdvControls" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                      </a>
-                      <a class="carousel-control-next" href="#luxAdvControls" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-                <div class="modal-foot">
-                  <h4>Luxury Adventures</h4>
-                  <div>
-                    <a href="https://luxuryadventures.ae/home" target="_blank" class="btn preview-btn">View
-                      Website <i class="fas fa-external-link-alt"></i></a>
-                  </div>
+          <!--Luxury Adv -->
+          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web">
+            <a class="" data-toggle="modal" data-target="#luxuryadv">
+              <div class="portfolio-wrap">
+                <img src="img/portfolio/luxuryadv/title.jpeg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <span>Luxury Adventures</span>
+                  <p>A complete e-commerce platform — easy admin content mangement, integrated email marketing &
+                    blog, SEO, reporting tools & much more. </p>
                 </div>
               </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-
-      <!--Telenor -->
-      <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app">
-        <a class="" data-toggle="modal" data-target="">
-          <div class="portfolio-wrap">
-            <img src="img/portfolio/app1.jpeg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <span>Telenor</span>
-              <p> A user-experience focused app to drive consumer relations for Pakistan's Telenor Franchise —
-                account management, geotags, servicing, referalls and more. </p>
-            </div>
-          </div>
-        </a>
-        <div class="modal fade" id="app1" tabindex="-1" role="dialog" aria-labelledby="app1" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-              <div class="modal-body">
-                <div class="row align-items-center">
-                  <div id="carouselExampleControls" class="col-lg-6 carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="img/portfolio/web1.jpg" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="img/portfolio/web2.jpeg" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="img/portfolio/app1.jpeg" class="d-block w-100" alt="...">
+            </a>
+            <div class="modal fade" id="luxuryadv" tabindex="-1" role="dialog" aria-labelledby="app1"
+              aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                  <div class="modal-body">
+                    <div class=" align-items-center">
+                      <div id="luxAdvControls" class=" carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="img/portfolio/luxuryadv/title.jpeg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="img/portfolio//luxuryadv/sup1.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="img/portfolio/luxuryadv/sup2.jpg" class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#luxAdvControls" role="button" data-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#luxAdvControls" role="button" data-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
                       </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
                   </div>
-                  <div class="col-lg-6 px-4">
-                    <h4>App 1</h4>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore
-                      et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                      nisi
-                      ut
-                      aliquip ex ea commodo consequat.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                      eiusmod tempor incididunt ut
-                      labore
-                      et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                      nisi
-                      ut
-                      aliquip ex ea commodo consequat.
-                    </p>
+                  <div class="modal-foot">
+                    <h4>Luxury Adventures</h4>
                     <div>
-                      <button class="btn preview-btn">Request Demo</button>
+                      <a href="https://luxuryadventures.ae/home" target="_blank" class="btn preview-btn">View
+                        Website <i class="fas fa-external-link-alt"></i></a>
                     </div>
-
                   </div>
                 </div>
               </div>
+
             </div>
           </div>
 
-        </div>
-      </div>
+          <!--Telenor -->
+          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app">
+            <a class="" data-toggle="modal" data-target="">
+              <div class="portfolio-wrap">
+                <img src="img/portfolio/app1.jpeg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <span>Telenor</span>
+                  <p> A user-experience focused app to drive consumer relations for Pakistan's Telenor Franchise —
+                    account management, geotags, servicing, referalls and more. </p>
+                </div>
+              </div>
+            </a>
+            <div class="modal fade" id="app1" tabindex="-1" role="dialog" aria-labelledby="app1" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                  <div class="modal-body">
+                    <div class="row align-items-center">
+                      <div id="carouselExampleControls" class="col-lg-6 carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="img/portfolio/web1.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="img/portfolio/web2.jpeg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="img/portfolio/app1.jpeg" class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+                          data-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button"
+                          data-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
+                      </div>
+                      <div class="col-lg-6 px-4">
+                        <h4>App 1</h4>
+                        <p>
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                          labore
+                          et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                          nisi
+                          ut
+                          aliquip ex ea commodo consequat.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                          eiusmod tempor incididunt ut
+                          labore
+                          et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                          nisi
+                          ut
+                          aliquip ex ea commodo consequat.
+                        </p>
+                        <div>
+                          <button class="btn preview-btn">Request Demo</button>
+                        </div>
 
-      </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
 
-      <!-- <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.2s">
+            </div>
+          </div>
+
+
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
               <img src="img/portfolio/app2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -432,7 +434,7 @@
             </div>
           </div> -->
 
-      <!-- <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.1s">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.1s">
         <div class="portfolio-wrap">
           <img src="img/portfolio/web2.jpeg" class="img-fluid" alt="">
           <div class="portfolio-info">
@@ -455,7 +457,7 @@
         </div>
       </div> -->
 
-      <!-- <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.2s">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
               <img src="img/portfolio/web1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -473,7 +475,7 @@
             </div>
           </div> -->
 
-      <!-- <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.2s">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
               <img src="img/portfolio/app4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -491,7 +493,7 @@
             </div>
           </div> -->
 
-      </div>
+        </div>
 
       </div>
     </section><!-- #portfolio -->
