--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Rabeel Jawaid</h4>
-                  <span>Founder, Chief Executive Officer</span>
+                  <span>Co-Founder, Chief Executive Officer</span>
                   <p>
                     <span style="font-weight: 600; font-style: normal;">Previously</span>
                     Masters in Systems Engineering @ UPENN <br />
@@ -544,7 +544,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Drew Stone</h4>
-                  <span>Chief Technology Officer</span>
+                  <span>Co-Founder, Chief Technology Officer</span>
                   <p>
                     <span style="font-weight: 600; font-style: normal;">Previously</span>
                     Founder @ BaireGroup <br />
