--- a/index.html
+++ b/index.html
@@ -204,31 +204,6 @@
           </div>
         </div>
 
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-          Launch demo modal
-        </button>
-
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-          aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                ...
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-              </div>
-            </div>
-          </div>
-        </div>
 
         <div class="row portfolio-container" style="min-height: 100vh;">
 
@@ -326,46 +301,46 @@
                 </div>
               </div>
             </a>
-            <div class="modal fade" id="luxuryadv" tabindex="-1" role="dialog" aria-labelledby="app1"
-              aria-hidden="true">
-              <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                  <div class="modal-body">
-                    <div class=" align-items-center">
-                      <div id="luxAdvControls" class=" carousel slide" data-ride="carousel">
-                        <div class="carousel-inner">
-                          <div class="carousel-item active">
-                            <img src="img/portfolio/luxuryadv/title.jpeg" class="d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="img/portfolio//luxuryadv/sup1.jpg" class="d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="img/portfolio/luxuryadv/sup2.jpg" class="d-block w-100" alt="...">
-                          </div>
+          </div>
+          <div class="modal fade" id="luxuryadv" tabindex="-1" role="dialog" aria-labelledby="app1" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-body">
+                  <div class=" align-items-center">
+                    <div id="luxAdvControls" class=" carousel slide" data-ride="carousel">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="img/portfolio/luxuryadv/title.jpeg" class="d-block w-100" alt="...">
                         </div>
-                        <a class="carousel-control-prev" href="#luxAdvControls" role="button" data-slide="prev">
-                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                          <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#luxAdvControls" role="button" data-slide="next">
-                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                          <span class="sr-only">Next</span>
-                        </a>
+                        <div class="carousel-item">
+                          <img src="img/portfolio//luxuryadv/sup1.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="img/portfolio/luxuryadv/sup2.jpg" class="d-block w-100" alt="...">
+                        </div>
                       </div>
-                    </div>
-                  </div>
-                  <div class="modal-foot">
-                    <h4>Luxury Adventures</h4>
-                    <div>
-                      <a href="https://luxuryadventures.ae/home" target="_blank" class="btn preview-btn">View
-                        Website <i class="fas fa-external-link-alt"></i></a>
+                      <a class="carousel-control-prev" href="#luxAdvControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                      <a class="carousel-control-next" href="#luxAdvControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                      </a>
                     </div>
                   </div>
                 </div>
+                <div class="modal-foot">
+                  <h4>Luxury Adventures</h4>
+                  <div>
+                    <a href="https://luxuryadventures.ae/home" target="_blank" class="btn preview-btn">View
+                      Website <i class="fas fa-external-link-alt"></i></a>
+                    <a href="" class="btn preview-btn" data-dismiss="modal"><i class="fas fa-times fa-lg"></i></a>
+                  </div>
+                </div>
               </div>
-
             </div>
+
           </div>
 
           <!--Telenor -->
