--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
               </div>
             </a>
             <div class="modal fade" id="samba" tabindex="-1" role="dialog" aria-labelledby="app1" aria-hidden="true">
-              <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-body">
                     <div class=" align-items-center">
@@ -277,12 +277,19 @@
                     </div>
                   </div>
                   <div class="modal-foot">
-                    <h4>Samba Bank</h4>
-                    <div>
-                      <a href="mailto:rabeel@seedcode.io" target="_blank" class="btn preview-btn">Request Demo <i
-                          class="fas fa-laptop-code"></i></i></a>
+                    <div class="foot-header">
+                      <h4>Samba Bank</h4>
+                      <div>
+                        <a href="" class="btn preview-btn" data-dismiss="modal"><i class="fas fa-times fa-lg"></i></a>
+                      </div>
                     </div>
+                    <p>We developed a singular application for Samba Bank customers and non-customers alike, with an
+                      array of features designed to facilitate streamlined, on-the-go banking — available on iOS and
+                      Android. </p>
+                    <a href="mailto:rabeel@seedcode.io" target="_blank" class="preview-btn">Request Demo <i
+                        class="fas fa-laptop-code"></i></i></a>
                   </div>
+
                 </div>
               </div>
 
@@ -303,7 +310,7 @@
             </a>
           </div>
           <div class="modal fade" id="luxuryadv" tabindex="-1" role="dialog" aria-labelledby="app1" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-body">
                   <div class=" align-items-center">
@@ -331,12 +338,16 @@
                   </div>
                 </div>
                 <div class="modal-foot">
-                  <h4>Luxury Adventures</h4>
-                  <div>
-                    <a href="https://luxuryadventures.ae/home" target="_blank" class="btn preview-btn">View
-                      Website <i class="fas fa-external-link-alt"></i></a>
-                    <a href="" class="btn preview-btn" data-dismiss="modal"><i class="fas fa-times fa-lg"></i></a>
+                  <div class="foot-header">
+                    <h4>Luxury Adventures</h4>
+                    <div>
+                      <a href="" class="btn preview-btn" data-dismiss="modal"><i class="fas fa-times fa-lg"></i></a>
+                    </div>
                   </div>
+                  <p>A complete e-commerce platform — easy admin content mangement, integrated email marketing &
+                    blog, SEO, reporting tools & much more. </p>
+                  <a href="https://luxuryadventures.ae/home" target="_blank" class="preview-btn">View
+                    Website <i class="fas fa-external-link-alt"></i></a>
                 </div>
               </div>
             </div>
@@ -356,7 +367,7 @@
               </div>
             </a>
             <div class="modal fade" id="app1" tabindex="-1" role="dialog" aria-labelledby="app1" aria-hidden="true">
-              <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-body">
                     <div class="row align-items-center">
