--- a/index.html
+++ b/index.html
@@ -250,19 +250,17 @@
                         <div class="carousel-item active">
                           <img src="img/portfolio/samba/title.jpeg" class="d-block w-100" alt="...">
                         </div>
-                        <div class="carousel-item px-img">
-                          <img src="img/portfolio//samba/sup1.jpg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item px-img">
+
+                        <div class="carousel-item">
                           <img src="img/portfolio/samba/sup2.jpg" class="d-block w-100" alt="...">
                         </div>
-                        <div class="carousel-item px-img">
+                        <div class="carousel-item">
                           <img src="img/portfolio/samba/sup3.jpg" class="d-block w-100" alt="...">
                         </div>
-                        <div class="carousel-item px-img">
+                        <div class="carousel-item">
                           <img src="img/portfolio/samba/sup4.jpg" class="d-block w-100" alt="...">
                         </div>
-                        <div class="carousel-item px-img">
+                        <div class="carousel-item">
                           <img src="img/portfolio/samba/sup5.jpg" class="d-block w-100" alt="...">
                         </div>
                       </div>
