--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           </div> -->
 
           <!--Samba Bank -->
-          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.2s">
             <a class="" data-toggle="modal" data-target="#samba">
               <div class="portfolio-wrap">
                 <img src="img/portfolio/samba/title.jpeg" class="img-fluid" alt="">
@@ -263,12 +263,22 @@
                         <div class="carousel-item">
                           <img src="img/portfolio/samba/sup5.jpg" class="d-block w-100" alt="...">
                         </div>
+                        <div class="carousel-item">
+                          <div class="embed-responsive embed-responsive-16by9">
+                            <video width="320" height="240" controls>
+                              <source src="video/VIDEO-2020-01-02-18-35-45.mp4" class="embed-responsive-item auto"
+                                type="video/mp4">
+                            </video>
+                          </div>
+                        </div>
                       </div>
-                      <a class="carousel-control-prev" href="#sambaControls" role="button" data-slide="prev">
+                      <a class="carousel-control-prev carousel-vid" href="#sambaControls" role="button"
+                        data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                       </a>
-                      <a class="carousel-control-next" href="#sambaControls" role="button" data-slide="next">
+                      <a class="carousel-control-next carousel-vid" href="#sambaControls" role="button"
+                        data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                       </a>
@@ -353,10 +363,10 @@
           </div>
 
           <!--Telenor -->
-          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app">
-            <a class="" data-toggle="modal" data-target="">
+          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.1s">
+            <a class="" data-toggle="modal" data-target="#telenor">
               <div class="portfolio-wrap">
-                <img src="img/portfolio/app1.jpeg" class="img-fluid" alt="">
+                <img src="img/portfolio/telenor/title.jpeg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <span>Telenor</span>
                   <p> A user-experience focused app to drive consumer relations for Pakistan's Telenor Franchise —
@@ -364,62 +374,44 @@
                 </div>
               </div>
             </a>
-            <div class="modal fade" id="app1" tabindex="-1" role="dialog" aria-labelledby="app1" aria-hidden="true">
-              <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                  <div class="modal-body">
-                    <div class="row align-items-center">
-                      <div id="carouselExampleControls" class="col-lg-6 carousel slide" data-ride="carousel">
-                        <div class="carousel-inner">
-                          <div class="carousel-item active">
-                            <img src="img/portfolio/web1.jpg" class="d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="img/portfolio/web2.jpeg" class="d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="img/portfolio/app1.jpeg" class="d-block w-100" alt="...">
-                          </div>
+          </div>
+          <div class="modal fade" id="telenor" tabindex="-1" role="dialog" aria-labelledby="telenor" aria-hidden="true">
+            <div class="modal-dialog tele" role="document">
+              <div class="modal-content">
+                <div class="modal-body">
+                  <div class=" align-items-center">
+                    <div id="telenorControls" class=" carousel slide" data-ride="carousel">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="img/portfolio/telenor/title.jpeg" class="d-block w-100" alt="...">
                         </div>
-                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
-                          data-slide="prev">
-                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                          <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleControls" role="button"
-                          data-slide="next">
-                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                          <span class="sr-only">Next</span>
-                        </a>
                       </div>
-                      <div class="col-lg-6 px-4">
-                        <h4>App 1</h4>
-                        <p>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                          labore
-                          et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                          nisi
-                          ut
-                          aliquip ex ea commodo consequat.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                          eiusmod tempor incididunt ut
-                          labore
-                          et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                          nisi
-                          ut
-                          aliquip ex ea commodo consequat.
-                        </p>
-                        <div>
-                          <button class="btn preview-btn">Request Demo</button>
-                        </div>
-
-                      </div>
+                      <!-- <a class="carousel-control-prev" href="#telenorControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                      <a class="carousel-control-next" href="#telenorControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                      </a> -->
                     </div>
                   </div>
                 </div>
+                <div class="modal-foot">
+                  <div class="foot-header">
+                    <h4>Telenor</h4>
+                    <div>
+                      <a href="" class="btn preview-btn" data-dismiss="modal"><i class="fas fa-times fa-lg"></i></a>
+                    </div>
+                  </div>
+                  <p> A user-experience focused app to drive consumer relations for Pakistan's Telenor Franchise —
+                    account management, geotags, servicing, referalls and more. </p>
+                  <a href="mailto:rabeel@seedcode.io" target="_blank" class="preview-btn">Request Demo <i
+                      class="fas fa-laptop-code"></i></i></a>
+                </div>
               </div>
-
             </div>
+
           </div>
 
 
